Updated move event to generate a move when a character tries to move into an impassible space. Re-jiggered some of the event class.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 ######################
 *.log
 *.sql
+log.txt
+save/*
 
 # OS generated files #
 ######################
@@ -28,3 +30,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# SVN #
+#######
+*.svn
