Tweaked map generation to be lazy and giving a base case. Removed legacy display.hpp, which should have been removed before.

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 *.log
 *.sql
 log.txt
-save/*
+*.db
 
 # OS generated files #
 ######################
@@ -33,3 +33,7 @@ Thumbs.db
 # SVN #
 #######
 *.svn
+
+# Profiling #
+#############
+gmon*
