--- a/beta/Middlecrest.cbp
+++ b/beta/Middlecrest.cbp
@@ -6,66 +6,163 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="default">
-				<Option output="Middlecrest" prefix_auto="1" extension_auto="1" />
+			<Target title="location.o">
+				<Option output="Middlecrest.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="../../game2" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
+				<Compiler>
+					<Add option="-O1" />
+					<Add option="-DDEBUG -DBETA" />
+				</Compiler>
+			</Target>
+			<Target title="default">
+				<Option output="Middlecrest" prefix_auto="1" extension_auto="1" />
+				<Option external_deps="../code/location.o;" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Linker>
+					<Add option="../code/location.o" />
+				</Linker>
+				<ExtraCommands>
+					<Add before="g++ -O3 -DDEBUG -DBETA -IC:\sean\game2 -IC:\pdcurses\win32a -c ../code/location.cpp -o ../code/location.o" />
+					<Mode after="always" />
+				</ExtraCommands>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-fomit-frame-pointer" />
 			<Add option="-Wshadow" />
 			<Add option="-Wswitch-default" />
 			<Add option="-ansi" />
+			<Add option="-pg" />
 			<Add option="-DDEBUG -DBETA" />
 			<Add directory="C:/sean/game2" />
 			<Add directory="C:/pdcurses/win32a" />
 		</Compiler>
 		<Linker>
-			<Add option="-s" />
+			<Add option="-pg -lgmon" />
 			<Add option="C:\pdcurses\win32\pdcurses.a" />
 			<Add option="C:\sean\game2\code\sqlite3.o" />
 			<Add directory="C:/sean/game2" />
 		</Linker>
-		<Unit filename="../code/ascii.cpp" />
-		<Unit filename="../code/cache.cpp" />
-		<Unit filename="../code/character.cpp" />
-		<Unit filename="../code/characterPool.cpp" />
-		<Unit filename="../code/command.cpp" />
-		<Unit filename="../code/database.cpp" />
-		<Unit filename="../code/event.cpp" />
-		<Unit filename="../code/game.cpp" />
-		<Unit filename="../code/location.cpp" />
-		<Unit filename="../code/logging.cpp" />
-		<Unit filename="../code/mersenne.cpp" />
-		<Unit filename="../code/object.cpp" />
-		<Unit filename="../code/pool.cpp" />
-		<Unit filename="../code/screens.cpp" />
-		<Unit filename="../code/service.cpp" />
-		<Unit filename="../code/turnBased.cpp" />
-		<Unit filename="../code/utility.cpp" />
-		<Unit filename="../includes/ascii.hpp" />
-		<Unit filename="../includes/cache.hpp" />
-		<Unit filename="../includes/character.hpp" />
-		<Unit filename="../includes/characterPool.hpp" />
-		<Unit filename="../includes/command.hpp" />
-		<Unit filename="../includes/configuration.hpp" />
-		<Unit filename="../includes/database.hpp" />
-		<Unit filename="../includes/display.hpp" />
-		<Unit filename="../includes/event.hpp" />
-		<Unit filename="../includes/game.hpp" />
-		<Unit filename="../includes/lib.h" />
-		<Unit filename="../includes/location.hpp" />
-		<Unit filename="../includes/logging.hpp" />
-		<Unit filename="../includes/object.hpp" />
-		<Unit filename="../includes/pool.hpp" />
-		<Unit filename="../includes/randomc.hpp" />
-		<Unit filename="../includes/screens.hpp" />
-		<Unit filename="../includes/service.hpp" />
-		<Unit filename="../includes/sqlite3.h" />
-		<Unit filename="../includes/turnBased.hpp" />
-		<Unit filename="../includes/utility.hpp" />
-		<Unit filename="../main.cpp" />
+		<Unit filename="../code/ascii.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/cache.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/character.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/characterPool.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/command.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/database.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/event.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/game.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/location.cpp">
+			<Option target="location.o" />
+		</Unit>
+		<Unit filename="../code/logging.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/mersenne.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/object.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/pool.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/screens.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/service.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/turnBased.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../code/utility.cpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/ascii.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/cache.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/character.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/characterPool.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/command.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/configuration.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/database.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/display.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/event.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/game.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/lib.h">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/location.hpp">
+			<Option target="location.o" />
+		</Unit>
+		<Unit filename="../includes/logging.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/object.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/pool.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/randomc.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/screens.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/service.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/sqlite3.h">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/turnBased.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../includes/utility.hpp">
+			<Option target="default" />
+		</Unit>
+		<Unit filename="../main.cpp">
+			<Option target="default" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
