--- a/production/Middlecrest.cbp
+++ b/production/Middlecrest.cbp
@@ -10,10 +10,16 @@
 				<Option output="Middlecrest" prefix_auto="1" extension_auto="1" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Linker>
+					<Add option="../code/location.o" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-fomit-frame-pointer" />
+			<Add option="-Wshadow" />
+			<Add option="-Wswitch-default" />
+			<Add option="-ansi" />
 			<Add directory="C:/sean/game2" />
 			<Add directory="C:/pdcurses/win32a" />
 		</Compiler>
@@ -23,6 +29,10 @@
 			<Add option="C:\sean\game2\code\sqlite3.o" />
 			<Add directory="C:/sean/game2" />
 		</Linker>
+		<ExtraCommands>
+			<Add before="g++ -O3 -IC:\sean\game2 -IC:\pdcurses\win32a -c ../code/location.cpp -o ../code/location.o" />
+			<Mode after="always" />
+		</ExtraCommands>
 		<Unit filename="../code/ascii.cpp" />
 		<Unit filename="../code/cache.cpp" />
 		<Unit filename="../code/character.cpp" />
@@ -31,7 +41,9 @@
 		<Unit filename="../code/database.cpp" />
 		<Unit filename="../code/event.cpp" />
 		<Unit filename="../code/game.cpp" />
-		<Unit filename="../code/location.cpp" />
+		<Unit filename="../code/location.cpp">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="../code/logging.cpp" />
 		<Unit filename="../code/mersenne.cpp" />
 		<Unit filename="../code/object.cpp" />
@@ -51,7 +63,9 @@
 		<Unit filename="../includes/event.hpp" />
 		<Unit filename="../includes/game.hpp" />
 		<Unit filename="../includes/lib.h" />
-		<Unit filename="../includes/location.hpp" />
+		<Unit filename="../includes/location.hpp">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="../includes/logging.hpp" />
 		<Unit filename="../includes/object.hpp" />
 		<Unit filename="../includes/pool.hpp" />
