--- a/tests/beta/tests.cbp
+++ b/tests/beta/tests.cbp
@@ -11,6 +11,9 @@
 				<Option output="tests" prefix_auto="1" extension_auto="1" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Linker>
+					<Add option="../../code/location.o" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
@@ -28,6 +31,10 @@
 			<Add option="C:\sean\game2\code\sqlite3.o" />
 			<Add directory="C:/sean/game2" />
 		</Linker>
+		<ExtraCommands>
+			<Add before="g++ -O3 -DDEBUG -DBETA -IC:\sean\game2 -IC:\pdcurses\win32a -c ../../code/location.cpp -o ../../code/location.o" />
+			<Mode after="always" />
+		</ExtraCommands>
 		<Unit filename="../../code/ascii.cpp">
 			<Option virtualFolder="game/" />
 		</Unit>
@@ -54,6 +61,7 @@
 		</Unit>
 		<Unit filename="../../code/location.cpp">
 			<Option virtualFolder="game/" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../code/logging.cpp">
 			<Option virtualFolder="game/" />
