--- a/tools/sqlite/sqlite.cbp
+++ b/tools/sqlite/sqlite.cbp
@@ -20,7 +20,7 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Wall" />
+			<Add option="-Os" />
 			<Add option="-fexceptions" />
 			<Add option="-DSQLITE_THREADSAFE=0" />
 			<Add option="-DSQLITE_DEFAULT_MEMSTATUS=0" />
@@ -35,6 +35,9 @@
 			<Add option="-DSQLITE_OMIT_AUTOINIT" />
 			<Add option="-DSQLITE_OMIT_COMPILEOPTION_DIAGS" />
 		</Compiler>
+		<Linker>
+			<Add option="-s" />
+		</Linker>
 		<Unit filename="shell.c">
 			<Option compilerVar="CC" />
 		</Unit>
