--- a/beta/Middlecrest.cbp
+++ b/beta/Middlecrest.cbp
@@ -32,16 +32,16 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-fomit-frame-pointer" />
 			<Add option="-Wshadow" />
 			<Add option="-Wswitch-default" />
 			<Add option="-ansi" />
-			<Add option="-pg" />
 			<Add option="-DDEBUG -DBETA" />
 			<Add directory="C:/sean/game2" />
 			<Add directory="C:/pdcurses/win32a" />
 		</Compiler>
 		<Linker>
-			<Add option="-pg -lgmon" />
+			<Add option="-s" />
 			<Add option="C:\pdcurses\win32\pdcurses.a" />
 			<Add option="C:\sean\game2\code\sqlite3.o" />
 			<Add directory="C:/sean/game2" />
