--- a/tests/beta/tests.cbp
+++ b/tests/beta/tests.cbp
@@ -11,13 +11,9 @@
 				<Option output="tests" prefix_auto="1" extension_auto="1" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Linker>
-					<Add option="../../code/location.o" />
-				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-fomit-frame-pointer" />
 			<Add option="-DUNIT_TEST" />
 			<Add option="-DDEBUG" />
 			<Add option="-DBETA" />
@@ -29,10 +25,11 @@
 		<Linker>
 			<Add option="C:\pdcurses\win32\pdcurses.a" />
 			<Add option="C:\sean\game2\code\sqlite3.o" />
+			<Add option="../../code/location.o" />
 			<Add directory="C:/sean/game2" />
 		</Linker>
 		<ExtraCommands>
-			<Add before="g++ -O3 -DDEBUG -DBETA -IC:\sean\game2 -IC:\pdcurses\win32a -c ../../code/location.cpp -o ../../code/location.o" />
+			<Add before="g++ -O3 -DDEBUG -DBETA -DUNIT_TEST -IC:\sean\game2 -IC:\pdcurses\win32a -c ../../code/location.cpp -o ../../code/location.o" />
 			<Mode after="always" />
 		</ExtraCommands>
 		<Unit filename="../../code/ascii.cpp">
