--- a/tests/beta/tests.cbp
+++ b/tests/beta/tests.cbp
@@ -14,6 +14,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-ansi" />
 			<Add option="-DUNIT_TEST" />
 			<Add option="-DDEBUG" />
 			<Add option="-DBETA" />
