--- a/development/mac/tests/beta/tests.cbp
+++ b/development/mac/tests/beta/tests.cbp
@@ -41,9 +41,9 @@
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../../../code/logging.cpp" />
-		<Unit filename="../../../../code/mersenne.cpp" />
 		<Unit filename="../../../../code/object.cpp" />
 		<Unit filename="../../../../code/pool.cpp" />
+		<Unit filename="../../../../code/randomc.cpp" />
 		<Unit filename="../../../../code/screens.cpp" />
 		<Unit filename="../../../../code/service.cpp" />
 		<Unit filename="../../../../code/turnBased.cpp" />
