--- a/tests/tests.cbp
+++ b/tests/tests.cbp
@@ -13,6 +13,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-DASSERTION_TEST" />
 			<Add option="-DUNIT_TEST" />
 			<Add option="-DDEBUG" />
 			<Add option="-DSUCCESS=1" />
